-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2015 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.1
-----------------

4/14/15
    - Added experimental code to lay foundation for handling ZIP load
      model in power flow (Newton, fast-decoupled only), continuation
      power flow, and optimal power flow (MIPS, fmincon, Knitro, IPOPT
      solvers only). Currently, ZIP loads can only be specified on a
      system-wide basis using the experimental options
      'exp.sys_wide_zip_loads.pw' and 'exp.sys_wide_zip_loads.qw'.
      Tests in t/t_vdep_load().
    - Added 'bus' and 'area' as possible values for 'load_zone' argument
      to total_load(), which is now used to compute voltage dependent
      load values.

3/27/15
    - Fixed issue where default value of 'feastol' option was not being
      set correctly in mips() when called directly (or via qps_mips())
      with 'feastol' = 0. By default, MATPOWER option 'mips.feastol' is
      set to zero but is normally replaced in mipsopf_solver() or
      dcopf_solver() with value of 'opf.violation' option before
      calling mips(), thereby masking the problem.
    - In miqps_glpk() variables of type 'B' (binary) are converted to
      'I' (integer) with appropriate bounds, since some versions of
      GLPK do not natively handle type 'B'.

3/24/15
    - Added code to DC OPF to return success = 0 for cases where the
      matrix is singular (e.g. islanded system without slack).
    - Fixed problem in have_fcn() where SeDuMi was turning off and
      leaving off all warnings.


Changes since 5.0
-----------------

3/20/15
    - Released version 5.1.

3/19/15
    - Added support for using PARDISO as linear solver for computing
      interior-point update steps in MIPS (v1.2), via new mplinsolver()