@@ -546,51 +546,54 @@ if ~isempty(ov)
     if have_old_style_ov
         opt = apply_old_mpoption_overrides(opt, ov);
     else
-        vf = nested_struct_copy(mpoption_default(), mpoption_info_mips('V'));
-        vf = nested_struct_copy(vf, mpoption_optional_fields());
-        ex = struct(...
-            'name', {...
-                'cpf.user_callback_args' ...
-            }, ...
-            'check', {...
-                0 ...
-            }, ...
-            'copy_mode', {...
-                '' ...
-            } ...
-        );
-        %% add exceptions for optional packages
-        opt_pkgs = mpoption_optional_pkgs();
-        n = length(ex);
-        for k = 1:length(opt_pkgs)
-            fname = ['mpoption_info_' opt_pkgs{k}];
-            if exist(fname, 'file') == 2
-                opt_ex = feval(fname, 'E');
-                nex = length(opt_ex);
-                if ~isempty(opt_ex)
-                    for j = 1:nex
-                        ex(n+j).name = opt_ex(j).name;
-                    end
-                    if isfield(opt_ex, 'check')
+        persistent nsc_opt;     %% cache this to speed things up
+        if ~isstruct(nsc_opt)
+            vf = nested_struct_copy(mpoption_default(), mpoption_info_mips('V'));
+            vf = nested_struct_copy(vf, mpoption_optional_fields());
+            ex = struct(...
+                'name', {...
+                    'cpf.user_callback_args' ...
+                }, ...
+                'check', {...
+                    0 ...
+                }, ...
+                'copy_mode', {...
+                    '' ...
+                } ...
+            );
+            %% add exceptions for optional packages
+            opt_pkgs = mpoption_optional_pkgs();
+            n = length(ex);
+            for k = 1:length(opt_pkgs)
+                fname = ['mpoption_info_' opt_pkgs{k}];
+                if exist(fname, 'file') == 2
+                    opt_ex = feval(fname, 'E');
+                    nex = length(opt_ex);
+                    if ~isempty(opt_ex)
                         for j = 1:nex
-                            ex(n+j).check = opt_ex(j).check;
+                            ex(n+j).name = opt_ex(j).name;
                         end
-                    end
-                    if isfield(opt_ex, 'copy_mode')
-                        for j = 1:nex
-                            ex(n+j).copy_mode = opt_ex(j).copy_mode;
+                        if isfield(opt_ex, 'check')
+                            for j = 1:nex
+                                ex(n+j).check = opt_ex(j).check;
+                            end
                         end
-                    end
-                    if isfield(opt_ex, 'valid_fields')
-                        for j = 1:nex
-                            ex(n+j).valid_fields = opt_ex(j).valid_fields;
+                        if isfield(opt_ex, 'copy_mode')
+                            for j = 1:nex
+                                ex(n+j).copy_mode = opt_ex(j).copy_mode;
+                            end
                         end
+                        if isfield(opt_ex, 'valid_fields')
+                            for j = 1:nex
+                                ex(n+j).valid_fields = opt_ex(j).valid_fields;
+                            end
+                        end
+                        n = n + nex;
                     end
-                    n = n + nex;
                 end
             end
+            nsc_opt = struct('check', 1, 'valid_fields', vf, 'exceptions', ex);
         end
-        nsc_opt = struct('check', 1, 'valid_fields', vf, 'exceptions', ex);
 %         if have_fcn('catchme')
 %             try
 %                 opt = nested_struct_copy(opt, ov, nsc_opt);
@@ -1379,94 +1382,102 @@ opt_v = [
 
 
 %%-------------------------------------------------------------------
-function opt = mpoption_default()
+function optt = mpoption_default()
 if DEBUG, fprintf('mpoption_default()\n'); end
-opt = struct(...
-    'v',                    mpoption_version, ...   %% version
-    'model',                'AC', ...
-    'pf',                   struct(...
-        'alg',                  'NR', ...
-        'tol',                  1e-8, ...
-        'nr',                   struct(...
-            'max_it',               10  ), ...
-        'fd',                   struct(...
-            'max_it',               30  ), ...
-        'gs',                   struct(...
-            'max_it',               1000  ), ...
-        'enforce_q_lims',       0   ), ...
-    'cpf',                  struct(...
-        'parameterization',     3, ...
-        'stop_at',              'NOSE', ...     %% 'NOSE', <lam val>, 'FULL'
-        'step',                 0.05, ...
-        'adapt_step',           0, ...
-        'error_tol',            1e-3, ...
-        'step_min',             1e-4, ...
-        'step_max',             0.2, ...
-        'plot',                 struct(...
-            'level',                0, ...
-            'bus',                  []  ), ...
-        'user_callback',        '', ...
-        'user_callback_args',   struct()    ), ...
-    'opf',                  struct(...
-        'ac',                   struct(...
-            'solver',               'DEFAULT'   ), ...
-        'dc',                   struct(...
-            'solver',               'DEFAULT'   ), ...
-        'violation',            5e-6, ...
-        'flow_lim',             'S', ...
-        'ignore_angle_lim',     0, ...
-        'init_from_mpc',        -1, ...
-        'return_raw_der',       0   ), ...
-    'verbose',              1, ...
-    'out',                  struct(...
-        'all',                  -1, ...
-        'sys_sum',              1, ...
-        'area_sum',             0, ...
-        'bus',                  1, ...
-        'branch',               1, ...
-        'gen',                  0, ...
-        'lim',                  struct(...
+persistent opt;             %% cache this for speed
+if ~isstruct(opt)
+    opt = struct(...
+        'v',                    mpoption_version, ...   %% version
+        'model',                'AC', ...
+        'pf',                   struct(...
+            'alg',                  'NR', ...
+            'tol',                  1e-8, ...
+            'nr',                   struct(...
+                'max_it',               10  ), ...
+            'fd',                   struct(...
+                'max_it',               30  ), ...
+            'gs',                   struct(...
+                'max_it',               1000  ), ...
+            'enforce_q_lims',       0   ), ...
+        'cpf',                  struct(...
+            'parameterization',     3, ...
+            'stop_at',              'NOSE', ...     %% 'NOSE', <lam val>, 'FULL'
+            'step',                 0.05, ...
+            'adapt_step',           0, ...
+            'error_tol',            1e-3, ...
+            'step_min',             1e-4, ...
+            'step_max',             0.2, ...
+            'plot',                 struct(...
+                'level',                0, ...
+                'bus',                  []  ), ...
+            'user_callback',        '', ...
+            'user_callback_args',   struct()    ), ...
+        'opf',                  struct(...
+            'ac',                   struct(...
+                'solver',               'DEFAULT'   ), ...
+            'dc',                   struct(...
+                'solver',               'DEFAULT'   ), ...
+            'violation',            5e-6, ...
+            'flow_lim',             'S', ...
+            'ignore_angle_lim',     0, ...
+            'init_from_mpc',        -1, ...
+            'return_raw_der',       0   ), ...
+        'verbose',              1, ...
+        'out',                  struct(...
             'all',                  -1, ...
-            'v',                    1, ...
-            'line',                 1, ...
-            'pg',                   1, ...
-            'qg',                   1   ), ...
-        'force',                0, ...
-        'suppress_detail',      -1  ), ...
-    'mips',                 struct(...  %% see mpoption_info_mips() for optional fields
-        'step_control',         0, ...
-        'linsolver',            '', ...
-        'feastol',              0, ...
-        'gradtol',              1e-6, ...
-        'comptol',              1e-6, ...
-        'costtol',              1e-6, ...
-        'max_it',               150, ...
-        'sc',                   struct(...
-            'red_it',               20  )), ...
-    'exp',                  struct(... %% experimental options
-        'sys_wide_zip_loads',   struct(...
-            'pw',                   [], ...
-            'qw',                   []  )) ...
-);
-opt_pkgs = mpoption_optional_pkgs();
-for k = 1:length(opt_pkgs)
-    fname = ['mpoption_info_' opt_pkgs{k}];
-    if exist(fname, 'file') == 2
-        opt = nested_struct_copy(opt, feval(fname, 'D'));
+            'sys_sum',              1, ...
+            'area_sum',             0, ...
+            'bus',                  1, ...
+            'branch',               1, ...
+            'gen',                  0, ...
+            'lim',                  struct(...
+                'all',                  -1, ...
+                'v',                    1, ...
+                'line',                 1, ...
+                'pg',                   1, ...
+                'qg',                   1   ), ...
+            'force',                0, ...
+            'suppress_detail',      -1  ), ...
+        'mips',                 struct(...  %% see mpoption_info_mips() for optional fields
+            'step_control',         0, ...
+            'linsolver',            '', ...
+            'feastol',              0, ...
+            'gradtol',              1e-6, ...
+            'comptol',              1e-6, ...
+            'costtol',              1e-6, ...
+            'max_it',               150, ...
+            'sc',                   struct(...
+                'red_it',               20  )), ...
+        'exp',                  struct(... %% experimental options
+            'sys_wide_zip_loads',   struct(...
+                'pw',                   [], ...
+                'qw',                   []  )) ...
+    );
+    opt_pkgs = mpoption_optional_pkgs();
+    for k = 1:length(opt_pkgs)
+        fname = ['mpoption_info_' opt_pkgs{k}];
+        if exist(fname, 'file') == 2
+            opt = nested_struct_copy(opt, feval(fname, 'D'));
+        end
     end
 end
+optt = opt;
 
 %%-------------------------------------------------------------------
-function opt = mpoption_optional_fields()
+function optt = mpoption_optional_fields()
 if DEBUG, fprintf('mpoption_optional_fields()\n'); end
-opt_pkgs = mpoption_optional_pkgs();
-opt = struct;
-for k = 1:length(opt_pkgs)
-    fname = ['mpoption_info_' opt_pkgs{k}];
-    if exist(fname, 'file') == 2
-        opt = nested_struct_copy(opt, feval(fname, 'V'));
+persistent opt;         %% cache this for speed
+if ~isstruct(opt)
+    opt_pkgs = mpoption_optional_pkgs();
+    opt = struct;
+    for k = 1:length(opt_pkgs)
+        fname = ['mpoption_info_' opt_pkgs{k}];
+        if exist(fname, 'file') == 2
+            opt = nested_struct_copy(opt, feval(fname, 'V'));
+        end
     end
 end
+optt = opt;
 
 %% globals
 %%-------------------------------------------------------------------
