@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.1
 -----------------
 
+4/16/15
+    - Added some caching to mpoption() and made minor changes to
+      nested_struct_copy() to greatly decrease the overhead added by
+      mpoption() when running many small problems.
+
 4/14/15
     - Added experimental code to lay foundation for handling ZIP load
       model in power flow (Newton, fast-decoupled only), continuation
